# apk_quim_plant

./: .gitignore  COMPLANT.bat  COMPLANT_APP.bat  README.md  app.py  complant_app.py  flet.yaml  main.py  pubspec.yaml  pubspec_flet.yaml  pyproject.toml  requirements.txt  setup.py  testar.bat  testar.py
.github/workflows/: build_apk.yml  test.yml
complant/: __init__.py  db_manager.py  main.py
complant/data/: compounds.json  compounds_cache.json  functions.json  functions_cache.json  synonyms.json  synonyms_cache.json
complant/search/: pubmed.py  wikipedia.py
