[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apk_quim_plant"
version = "1.0.0"
description = "🌿 Análise Fitoquímica de Plantas"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flet>=0.85.3",
    "rdkit-pypi==2023.09.1",
    "pandas==2.0.3",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "plotly==5.17.0",
    "matplotlib==3.7.2",
    "pubchempy==1.0.4",
    "biopython==1.81",
    "scikit-learn==1.3.0",
    "networkx==3.1",
    "ipywidgets==8.1.0",
    "jupyter==1.0.0",
    "numpy==1.24.3",
    "openpyxl==3.1.2",
    "pillow==10.0.0",
]

[project.scripts]
apk_quim_plant = "main:main"

[tool.flet]
entrypoint = "main.py"